# pickle

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
benchmarks/: bench_bw_read.cpp  bench_bw_send_recv.cpp  bench_bw_send_recv_cpy.cpp  bench_cuda_memcpy.cpp  bench_pickle.cpp  bench_tccl.cpp  bench_tccl_8gpu.cpp  bench_tccl_full_duplex.cpp  bench_tccl_interference.cpp  bench_tccl_v2.cpp
examples/: client.cpp  demo.cpp  example_cq_events.cpp  example_cuda_ipc_mem_handle.cpp  example_dct.cpp  example_gid_info.cpp  example_gpu_mr.cpp  example_loopback_qp.cpp  example_manual_connection.cpp  example_read_write.cpp  example_rpc_complex.cpp  example_rpc_simple.cpp  example_send_recv.cpp  example_thread_controller.cpp  exp_logger.cpp  gid_info.cpp  gpu_dev_info.cpp  huge_mr.cpp  loopback.cpp  memory_region.cpp  rc_read.cpp  rc_send_recv.cpp  send_recv.cpp  server.cpp  socket_client.cpp  socket_server.cpp  tccl.cpp  thread_controller.cpp
include/: cuda_util.h  gpu_mem_util.h  pickle.h  pickle_logger.h  rdma_util.h  rpc_core.h
scripts/: rnic_monitor.py
src/: gpu_mem_util.cpp  pickle.cpp  rdma_util.cpp
tests/: test_concurrent_queue.cpp  test_flusher.cpp  test_huge_mr.cpp  test_loopback.cpp  test_open_device.cpp  test_polymorphism.cpp  test_vector.cpp
